--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,19 @@
 # rst2html outputs
 *.html
 
-# Python
-*.pyc
-*.pyo
+# Python object files
+__pycache__/
+*.py[cod]
 
 # Python distutils
-build
+build/
 
 # Python setuptools
-dist
-drylib.egg-info
+dist/
+*.egg-info/
+
+# pytest artifacts
+.pytest_cache/
+
+# tox artifacts
+.tox/
